Filepaths replaced with relative file paths on GitHub

--- a/concerto/notebooks/check_if_two_files_contain_same_metabolites.ipynb
+++ b/concerto/notebooks/check_if_two_files_contain_same_metabolites.ipynb
@@ -3553,8 +3553,8 @@
     "import re\n",
     "\n",
     "#We load the files that we want to compare, in this case it will be the biolog file and the exchange metabolomics file.\n",
-    "biolog = pd.read_csv(\"/Users/rodr579/Downloads/PreBiologFile_Rep1_M2.csv\", encoding='latin-1')\n",
-    "ext = pd.read_csv(\"/Users/rodr579/Library/CloudStorage/OneDrive-PNNL/venv/BioCycID_Processed_Metabolomic_Data_NoRhodOutlier_6_14_24.tsv\", delimiter=\"\\t\")\n",
+    "biolog = pd.read_csv("pnnl-predictive-phenomics/concerto/concerto/memotedata/PreBiologFile_Rep1_M2", encoding='latin-1')\n",
+    "ext = pd.read_csv(\"pnnl-predictive-phenomics/concerto/concerto/memotedata/BioCycID_Processed_Metabolomic_Data_NoRhodOutlier_6_14_24.tsv\", delimiter=\"\\t\")\n",
     "#We transform the data of the columns where the name of the compounds are on each file to a list.\n",
     "list_biolog = biolog[\"Compound\"].tolist()\n",
     "list_ext = ext[\"Metabolites\"].tolist()\n",
