Updated jupyter notebook files
Annotated code (markdown) and replaced filepaths with relative github filepaths

--- a/concerto/notebooks/check_if_two_files_contain_same_metabolites.ipynb
+++ b/concerto/notebooks/check_if_two_files_contain_same_metabolites.ipynb
@@ -1,12 +1,93 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "83d35be8-70ac-478b-a1f7-eebcd38e865e",
+   "metadata": {},
+   "source": [
+    "# 2. This code will help you look for similar components in two different files.\n",
+    "Compares the observed (biolog) data to predicted memote model data for accuracy of prediction."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "a84573db",
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": null,
+   "id": "51894418-223a-4324-9cea-fce836491131",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#We import pandas and regex\n",
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "#We load the files that we want to compare, in this case it will be the biolog file and the exchange metabolomics file.\n",
+    "biolog = pd.read_csv(\"concerto/concerto/memotedata/PreBiologFile_Rep1_M2\", encoding='latin-1')\n",
+    "ext = pd.read_csv(\"concerto/concerto/memotedata/BioCycID_Processed_Metabolomic_Data_NoRhodOutlier_6_14_24.tsv\", delimiter=\"\\t\")\n",
+    "#We transform the data of the columns where the name of the compounds are on each file to a list.\n",
+    "list_biolog = biolog[\"Compound\"].tolist()\n",
+    "list_ext = ext[\"Metabolites\"].tolist()\n",
+    "\n",
+    "#We create a copy of the biolog list.\n",
+    "copy_list_biolog = list_biolog.copy()\n",
+    "#We create an empty dictionary.\n",
+    "compound_dictionary = {}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "648577a8-bf06-451a-812b-451f551c8e1d",
+   "metadata": {},
+   "source": [
+    "Clean Biolog and metabolomics data for ease of comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5127deb1-07ad-4c84-b3dc-080970fcb516",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#We iterate through each compound on the biolog file.\n",
+    "for i in range(len(list_biolog)):\n",
+    "    #Here we remove special characters and single letters.\n",
+    "    list_biolog[i] = list_biolog[i].lower()\n",
+    "    list_biolog[i] = re.sub(r\"\\_\\-\", \"\", list_biolog[i])\n",
+    "    list_biolog[i] = re.sub(r\"\\n\", \"-\", list_biolog[i])\n",
+    "    list_biolog[i] = re.sub(r\"acid\", \"-\", list_biolog[i])\n",
+    "    list_biolog[i] = re.sub(r\" \", \"-\", list_biolog[i])\n",
+    "    list_biolog[i] = list_biolog[i].split(\"-\")\n",
+    "    list_biolog[i] = [item for item in list_biolog[i] if len(item) > 1]\n",
+    "    #After cleaning, we assign these name to a dictionary.\n",
+    "    compound_dictionary[copy_list_biolog[i]] = list_biolog[i]\n",
+    "\n",
+    "#For the exchange metabolomics file we just need to remove the hilpos and hilneg names from the file.\n",
+    "for i in range(len(list_ext)):\n",
+    "    list_ext[i] = list_ext[i].lower()\n",
+    "    list_ext[i] = re.sub(r\"\\_hilneg\", \"\", list_ext[i])\n",
+    "    list_ext[i] = re.sub(r\"\\_hilpos\", \"\", list_ext[i])\n",
+    "    #print(list_ext[i])\n",
+    "\n",
+    "#We make a copy of the exchange metabolomics file.\n",
+    "copy_list_ext = list_ext.copy()    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "735997cb-17db-4f2c-b915-1ec8b21093fb",
+   "metadata": {},
+   "source": [
+    "Select for specific key words and search for presence in exchanged metabolomics list. Produces a list with the key word, and the values that\n",
+    "match in each list\n",
+    "- '''Since the names of the compounds could not be exactly identical, it is necessary to check each match and determine \n",
+    "if they are the same compound.'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82d7e8b7-7f82-41a9-854e-47c5452b87da",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -3546,57 +3627,21 @@
     }
    ],
    "source": [
-    "'''This code will help you look for similar components in two different files.'''\n",
-    "\n",
-    "#We import pandas and regex\n",
-    "import pandas as pd\n",
-    "import re\n",
-    "\n",
-    "#We load the files that we want to compare, in this case it will be the biolog file and the exchange metabolomics file.\n",
-    "biolog = pd.read_csv("pnnl-predictive-phenomics/concerto/concerto/memotedata/PreBiologFile_Rep1_M2", encoding='latin-1')\n",
-    "ext = pd.read_csv(\"pnnl-predictive-phenomics/concerto/concerto/memotedata/BioCycID_Processed_Metabolomic_Data_NoRhodOutlier_6_14_24.tsv\", delimiter=\"\\t\")\n",
-    "#We transform the data of the columns where the name of the compounds are on each file to a list.\n",
-    "list_biolog = biolog[\"Compound\"].tolist()\n",
-    "list_ext = ext[\"Metabolites\"].tolist()\n",
-    "\n",
-    "#We create a copy of the biolog list.\n",
-    "copy_list_biolog = list_biolog.copy()\n",
-    "#We create an empty dictionary.\n",
-    "compound_dictionary = {}\n",
-    "\n",
-    "#We iterate through each compound on the biolog file.\n",
-    "for i in range(len(list_biolog)):\n",
-    "    #Here we remove special characters and single letters.\n",
-    "    list_biolog[i] = list_biolog[i].lower()\n",
-    "    list_biolog[i] = re.sub(r\"\\_\\-\", \"\", list_biolog[i])\n",
-    "    list_biolog[i] = re.sub(r\"\\n\", \"-\", list_biolog[i])\n",
-    "    list_biolog[i] = re.sub(r\"acid\", \"-\", list_biolog[i])\n",
-    "    list_biolog[i] = re.sub(r\" \", \"-\", list_biolog[i])\n",
-    "    list_biolog[i] = list_biolog[i].split(\"-\")\n",
-    "    list_biolog[i] = [item for item in list_biolog[i] if len(item) > 1]\n",
-    "    #After cleaning, we assign these name to a dictionary.\n",
-    "    compound_dictionary[copy_list_biolog[i]] = list_biolog[i]\n",
-    "\n",
-    "#For the exchange metabolomics file we just need to remove the hilpos and hilneg names from the file.\n",
-    "for i in range(len(list_ext)):\n",
-    "    list_ext[i] = list_ext[i].lower()\n",
-    "    list_ext[i] = re.sub(r\"\\_hilneg\", \"\", list_ext[i])\n",
-    "    list_ext[i] = re.sub(r\"\\_hilpos\", \"\", list_ext[i])\n",
-    "    #print(list_ext[i])\n",
-    "\n",
-    "#We make a copy of the exchange metabolomics file.\n",
-    "copy_list_ext = list_ext.copy()    \n",
-    "\n",
     "# Here we will compare each keyword with the names of the exchange metabolomics list of names.\n",
     "for key, values in compound_dictionary.items():\n",
     "    for keyword in values:\n",
     "        for compound in list_ext:\n",
     "            if re.search(keyword, compound):\n",
     "                print(keyword)\n",
-    "                print(key + \": \" + compound + \"\\n\")\n",
-    "\n",
-    "'''Since the names of the compounds could not be exactly identical, it is necessary to check each match and determine \n",
-    "if they are the same compound.'''"
+    "                print(key + \": \" + compound + \"\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27e8a925-6230-4092-a8f2-f5454becc3ae",
+   "metadata": {},
+   "source": [
+    "# ASK: Is this just here for tutorial?"
    ]
   },
   {
@@ -3619,6 +3664,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5fab5c05-dbe7-429a-8def-3084c65bd121",
+   "metadata": {},
+   "source": [
+    "Repeat process for second set of key words"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "id": "99dec9c2",
@@ -3633,7 +3686,7 @@
     }
    ],
    "source": [
-    "biolog = pd.read_csv(\"/Users/rodr579/Downloads/PreBiologFile_Rep1_M2.csv\", encoding='latin-1')\n",
+    "biolog = pd.read_csv(\"concerto/concerto/memotedata/PreBiologFile_Rep1_M2.csv\", encoding='latin-1')\n",
     "Compounds = biolog[\"Compound\"].tolist()\n",
     "print(Compounds)"
    ]
@@ -3642,9 +3695,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "d57ddb1b",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -4389,8 +4440,8 @@
    "source": [
     "import pandas as pd\n",
     "import re\n",
-    "biolog = pd.read_csv(\"/Users/rodr579/Downloads/pm1-plate 1.tsv\", delimiter=\"\\t\", encoding='latin-1')\n",
-    "ext = pd.read_csv(\"/Users/rodr579/Library/CloudStorage/OneDrive-PNNL/venv/BioCycID_Processed_Metabolomic_Data_NoRhodOutlier_6_14_24.tsv\", delimiter=\"\\t\")\n",
+    "biolog = pd.read_csv(\"concerto/concerto/memotedata/pm1-plate 1.tsv\", delimiter=\"\\t\", encoding='latin-1')\n",
+    "ext = pd.read_csv(\"concerto/concerto/memotedata/BioCycID_Processed_Metabolomic_Data_NoRhodOutlier_6_14_24.tsv\", delimiter=\"\\t\")\n",
     "list_biolog = biolog[\"Compound\"].tolist()\n",
     "list_ext = ext[\"Metabolites\"].tolist()\n",
     "\n",
@@ -4464,7 +4515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
