--- a/concerto/notebooks/create_community_model.ipynb
+++ b/concerto/notebooks/create_community_model.ipynb
@@ -1,12 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "89f1e0fa-8bdd-4028-a408-6f4905203857",
+   "metadata": {},
+   "source": [
+    "# Create community model using python's MICOM (metabolic modeling of microbial communities) based on growth and exchange of metabolites \n",
+    "- Last? step of model building"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "1ce4b7a4",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -120,13 +127,14 @@
     "from micom import load_pickle\n",
     "from micom.viz import plot_tradeoff, plot_exchanges_per_sample, plot_growth\n",
     "\n",
-    "model_csc031 = read_sbml_model(\"updated_csc031.xml\")\n",
-    "model_csc009 = read_sbml_model(\"updated_csc009.xml\")\n",
-    "model_csc040 = read_sbml_model(\"updated_csc040.xml\")\n",
-    "model_csc043 = read_sbml_model(\"csc043.xml\")\n",
-    "model_csc052 = read_sbml_model(\"updated_csc052.xml\")\n",
+    "model_csc031 = read_sbml_model(\"updated_csc031.xml\") #concerto/concerto/memotedata/filename.xml?\n",
+    "model_csc009 = read_sbml_model(\"updated_csc009.xml\") #concerto/concerto/memotedata\n",
+    "model_csc040 = read_sbml_model(\"updated_csc040.xml\") #concerto/concerto/memotedata\n",
+    "model_csc043 = read_sbml_model(\"csc043.xml\") #concerto/concerto/memotedata\n",
+    "model_csc052 = read_sbml_model(\"updated_csc052.xml\") #concerto/concerto/memotedata\n",
     "\n",
     "#print(type(model_csc031.solver))\n",
+    "#QUESTION ^ will it always be just model_csc031 in here?\n",
     "\n",
     "model_csc031_metabolites, model_csc031_reactions = len(model_csc031.metabolites), len(model_csc031.reactions)\n",
     "model_csc009_metabolites, model_csc009_reactions = len(model_csc009.metabolites), len(model_csc009.reactions)\n",
@@ -150,7 +158,7 @@
     "#manifest = build(Tax, out_folder=\"CarbStor_Community\", model_db=path, cutoff=0.0001, threads=10,solver='glpk')\n",
     "#print(manifest)\n",
     "\n",
-    "com = load_pickle(\"/Users/rodr579/Library/CloudStorage/OneDrive-PNNL/venv/CarbStor_Community/One.pickle\")\n",
+    "com = load_pickle(\"concerto/concerto/memotedata/CarbStor_Community/One.pickle\")\n",
     "#print(len(com.reactions))\n",
     "result = com.optimize(fluxes=True, pfba=True)\n",
     "result"
@@ -191,16 +199,24 @@
    ],
    "source": [
     "Manifest = pd.DataFrame(columns=['file','kingdom','phylum','class','order','family','genus', \"species\"])\n",
-    "Manifest.loc[len(Manifest.index)] = [\"/Users/rodr579/Library/CloudStorage/OneDrive-PNNL/venv/updated_csc009.xml\", \"Bacteria\", \"Actinomycetota\", \"Actinomycetia\", \"Micrococcales\", \"Microbacteriaceae\", \"Curtobacterium\", \"C. Flaccumfaciens\"]\n",
-    "Manifest.loc[len(Manifest.index)] = [\"/Users/rodr579/Library/CloudStorage/OneDrive-PNNL/venv/updated_csc031.xml\", \"Bacteria\", \"Actinomycetota\", \"Actinomycetia\", \"Micrococcales\", \"Microbacteriaceae\", \"Microbacterium\", \"Pending\"]\n",
-    "Manifest.loc[len(Manifest.index)] = [\"/Users/rodr579/Library/CloudStorage/OneDrive-PNNL/venv/updated_csc040.xml\", \"Bacteria\", \"Actinomycetota\", \"Actinomycetia\", \"Mycobacteriales\", \"Nocardiaceae\", \"Rhodococcus\", \"R. Qingshengqii\"]\n",
-    "Manifest.loc[len(Manifest.index)] = [\"/Users/rodr579/Library/CloudStorage/OneDrive-PNNL/venv/csc043.xml\", \"Bacteria\", \"Firmicutes\", \"Bacilli\", \"Bacillales\", \"Paenibacillaceae\", \"Paenibacillus\", \"P. Lautus\"]\n",
-    "Manifest.loc[len(Manifest.index)] = [\"/Users/rodr579/Library/CloudStorage/OneDrive-PNNL/venv/updated_csc052.xml\", \"Bacteria\", \"Firmicutes\", \"Bacilli\", \"Bacillales\", \"Bacillaceae\", \"Bacillus\", \"B. Toyonensis\"]\n",
+    "Manifest.loc[len(Manifest.index)] = [\"concerto/concerto/memotedata/updated_csc009.xml\", \"Bacteria\", \"Actinomycetota\", \"Actinomycetia\", \"Micrococcales\", \"Microbacteriaceae\", \"Curtobacterium\", \"C. Flaccumfaciens\"]\n",
+    "Manifest.loc[len(Manifest.index)] = [\"concerto/concerto/memotedata/updated_csc031.xml\", \"Bacteria\", \"Actinomycetota\", \"Actinomycetia\", \"Micrococcales\", \"Microbacteriaceae\", \"Microbacterium\", \"Pending\"]\n",
+    "Manifest.loc[len(Manifest.index)] = [\"concerto/concerto/memotedata/updated_csc040.xml\", \"Bacteria\", \"Actinomycetota\", \"Actinomycetia\", \"Mycobacteriales\", \"Nocardiaceae\", \"Rhodococcus\", \"R. Qingshengqii\"]\n",
+    "Manifest.loc[len(Manifest.index)] = [\"concerto/concerto/memotedata/csc043.xml\", \"Bacteria\", \"Firmicutes\", \"Bacilli\", \"Bacillales\", \"Paenibacillaceae\", \"Paenibacillus\", \"P. Lautus\"]\n",
+    "Manifest.loc[len(Manifest.index)] = [\"concerto/concerto/memotedata/updated_csc052.xml\", \"Bacteria\", \"Firmicutes\", \"Bacilli\", \"Bacillales\", \"Bacillaceae\", \"Bacillus\", \"B. Toyonensis\"]\n",
     "\n",
     "print(Manifest)\n",
     "\n",
     "#file2 = Manifest.to_csv(\"Carbstor_Community_Bacteria_Manifest.csv\")\n",
     "#read_file2 = pd.read_csv(\"Carbstor_Community_Bacteria_Manifest.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e2f428c-aa60-4986-a15e-2d23dde48375",
+   "metadata": {},
+   "source": [
+    "# ASK: UNSURE HOW THIS IS DIFFERENT FROM ABOVE, is this just comparing with and without Curto?"
    ]
   },
   {
@@ -409,10 +425,10 @@
     "Tax.loc[len(Tax.index)] = ['CSC052', 'Bacillus', 'B. Toyonensis',model_csc052_reactions,model_csc052_metabolites,'One',250]\n",
     "\n",
     "Manifest = pd.DataFrame(columns=['file','kingdom','phylum','class','order','family','genus', \"species\"])\n",
-    "Manifest.loc[len(Manifest.index)] = [\"/Users/rodr579/Library/CloudStorage/OneDrive-PNNL/venv/updated_csc031.xml\", \"Bacteria\", \"Actinomycetota\", \"Actinomycetia\", \"Micrococcales\", \"Microbacteriaceae\", \"Microbacterium\", \"Pending\"]\n",
-    "Manifest.loc[len(Manifest.index)] = [\"/Users/rodr579/Library/CloudStorage/OneDrive-PNNL/venv/updated_csc040.xml\", \"Bacteria\", \"Actinomycetota\", \"Actinomycetia\", \"Mycobacteriales\", \"Nocardiaceae\", \"Rhodococcus\", \"R. Qingshengqii\"]\n",
-    "Manifest.loc[len(Manifest.index)] = [\"/Users/rodr579/Library/CloudStorage/OneDrive-PNNL/venv/csc043.xml\", \"Bacteria\", \"Firmicutes\", \"Bacilli\", \"Bacillales\", \"Paenibacillaceae\", \"Paenibacillus\", \"P. Lautus\"]\n",
-    "Manifest.loc[len(Manifest.index)] = [\"/Users/rodr579/Library/CloudStorage/OneDrive-PNNL/venv/updated_csc052.xml\", \"Bacteria\", \"Firmicutes\", \"Bacilli\", \"Bacillales\", \"Bacillaceae\", \"Bacillus\", \"B. Toyonensis\"]\n",
+    "Manifest.loc[len(Manifest.index)] = [\"concerto/concerto/memotedata/updated_csc031.xml\", \"Bacteria\", \"Actinomycetota\", \"Actinomycetia\", \"Micrococcales\", \"Microbacteriaceae\", \"Microbacterium\", \"Pending\"]\n",
+    "Manifest.loc[len(Manifest.index)] = [\"concerto/concerto/memotedata/updated_csc040.xml\", \"Bacteria\", \"Actinomycetota\", \"Actinomycetia\", \"Mycobacteriales\", \"Nocardiaceae\", \"Rhodococcus\", \"R. Qingshengqii\"]\n",
+    "Manifest.loc[len(Manifest.index)] = [\"concerto/concerto/memotedata/csc043.xml\", \"Bacteria\", \"Firmicutes\", \"Bacilli\", \"Bacillales\", \"Paenibacillaceae\", \"Paenibacillus\", \"P. Lautus\"]\n",
+    "Manifest.loc[len(Manifest.index)] = [\"concerto/concerto/memotedata/updated_csc052.xml\", \"Bacteria\", \"Firmicutes\", \"Bacilli\", \"Bacillales\", \"Bacillaceae\", \"Bacillus\", \"B. Toyonensis\"]\n",
     "\n",
     "print(Manifest)\n",
     "\n",
@@ -434,9 +450,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "fa6a53f3",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -524,18 +538,24 @@
    "source": [
     "#com = load_pickle(\"/Users/rodr579/Library/CloudStorage/OneDrive-PNNL/venv/CarbStor_Community_NoCurtobacterium/One.pickle\")\n",
     "#print(len(com.reactions))\n",
-    "com = load_pickle(\"/Users/rodr579/Library/CloudStorage/OneDrive-PNNL/venv/CarbStor_Community_NoCurtobacterium/One.pickle\")\n",
+    "com = load_pickle(\"concerto/concerto/memotedata/CarbStor_Community_NoCurtobacterium/One.pickle\")\n",
     "result = com.optimize(fluxes=True)\n",
     "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "278078d5-62d9-4692-b852-9677654bd17d",
+   "metadata": {},
+   "source": [
+    "Assuming this is to set up a list of metabolites being exchanged in each community?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 48,
    "id": "b6a4c05b",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -588,9 +608,7 @@
    "cell_type": "code",
    "execution_count": 103,
    "id": "5105733c",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -990,9 +1008,7 @@
    "cell_type": "code",
    "execution_count": 102,
    "id": "da932f89",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2004,12 +2020,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "945ec270-bd92-4388-8b2f-261f595ffbee",
+   "metadata": {},
+   "source": [
+    "Flux = reaction rates"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 104,
    "id": "e47d87ca",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2936,7 +2958,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
