--- a/concerto/notebooks/generate_carveme.ipynb
+++ b/concerto/notebooks/generate_carveme.ipynb
@@ -1,12 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "856d907f-4674-4c0a-854d-9700d3686dd5",
+   "metadata": {},
+   "source": [
+    "# Generate carve.me model which builds model.xml files using FASTA RNA files\n",
+    "- Requires completion of \"check__\", \"confirm__\", and \"create_community__\" files"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "aa55acf7",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -125,10 +132,10 @@
     "from cobra.medium import minimal_medium\n",
     "\n",
     "# This dataframe represent the compounds found on the minimal media of the model.\n",
-    "filtered_df = pd.read_csv(\"/Users/rodr579/Library/CloudStorage/OneDrive-PNNL/venv/CarveMeMinimalMediaFile.csv\")\n",
+    "filtered_df = pd.read_csv(\"concerto/concerto/memotedata/CarveMeMinimalMediaFile.csv\")\n",
     "#print(filtered_df)\n",
     "# This dataframe represents the BiGG reactions found on the biolog file.\n",
-    "biolog_names = pd.read_csv(\"/Users/rodr579/Library/CloudStorage/OneDrive-PNNL/venv/PM02OnlyNamesAndBiGG.csv\")\n",
+    "biolog_names = pd.read_csv(\"concerto/concerto/memotedata/PM02OnlyNamesAndBiGG.csv\")\n",
     "#print(biolog_names)\n",
     "\n",
     "'''This code will help you create a tsv file to use on the carveme software'''\n",
@@ -191,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
