--- a/concerto/notebooks/confirm_growth_add_carbon_sources_to_the_minimum_media.ipynb
+++ b/concerto/notebooks/confirm_growth_add_carbon_sources_to_the_minimum_media.ipynb
@@ -1,22 +1,53 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1277f0fa-b2cb-4896-8e28-7c8a0fafdecc",
+   "metadata": {},
+   "source": [
+    "# This code will help you confirm if there was growth by adding each carbon source from the PM02 biolog file to the model's carbonless minimal media\n",
+    "- okay pero why to carbonless minimal media"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e294d6d",
+   "id": "0c462b0f-20c7-4d5f-9230-ac584b842c60",
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''This code will help you confirm if there was growth by adding each carbon source from the PM02 biolog file to the model's carbonless minimal media'''\n",
-    "\n",
     "#Import the necessary libraries.\n",
     "import cobra\n",
     "import re\n",
     "import pandas as pd\n",
     "from cobra.medium import minimal_medium\n",
-    "from cobra.io import read_sbml_model\n",
-    "\n",
-    "#This function extracts the minimal media from the model and extracts the exchange that do not contain a specific element.\n",
+    "from cobra.io import read_sbml_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bfac88f-7246-4913-a361-10a2f0804488",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71f810aa-f24c-4860-a20d-98521776b17e",
+   "metadata": {},
+   "source": [
+    "Create function that extracts the minimal media from the model and extracts the exchange that do not contain a specific element.\n",
+    "- ASKm jeremy to walk through exactly what's happening here (thinking process) -- why take out the specific element from certain reactions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17ca4181-f491-40ba-9312-7503c9eb7dfe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def getMinMedias(model, element, model_name):\n",
     "    '''\n",
     "    PARAMETERS:\n",
@@ -59,8 +90,24 @@
     "    # We create a new file and write the Info variable in it.\n",
     "    newfile = open(\"minimal_media_no_carbon_csc031.csv\", \"w\")\n",
     "    newfile.write(Info)\n",
-    "    return #print(Info)\n",
-    "\n",
+    "    return #print(Info)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab23afe1-a327-4132-a14e-8451e54450b1",
+   "metadata": {},
+   "source": [
+    "Read in the (growth?) model and apply the getMinMedias function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1829814-aca1-4021-a02a-f38498146326",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#We extract the model and apply the function to it.\n",
     "model_csc031 = read_sbml_model(\"/Users/rodr579/Library/CloudStorage/OneDrive-PNNL/venv/GapfilledCSC031.xml\")\n",
     "getMinMedias(model_csc031, \"C\", \"min_medium_csc031\")\n",
@@ -74,7 +121,24 @@
     "# We iterate through each exchange reaction found in the file.\n",
     "for i in range(len(min_media_no_carbon[\"exchange\"])):\n",
     "    # We add each exchange reaction to the dictionary.\n",
-    "    min_media_dict[min_media_no_carbon[\"exchange\"][i]] = float(min_media_no_carbon[\"uptake\"][i])\n",
+    "    min_media_dict[min_media_no_carbon[\"exchange\"][i]] = float(min_media_no_carbon[\"uptake\"][i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07045c6e-f273-461a-994c-ae656254fd08",
+   "metadata": {},
+   "source": [
+    "QUESTION: so is 1000 the threshold number for growth?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b09871e3-7890-4cb7-bc1c-61514a831898",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Here are some exchange reactions that we a readding to the dictionary that may benefit growth.\n",
     "#min_media_dict[\"EX_glc__D_e\"] = 1000.0\n",
     "min_media_dict[\"EX_h2o_e\"] = 1000.0\n",
@@ -82,8 +146,24 @@
     "min_media_dict[\"EX_na1_e\"] = 1000.0\n",
     "min_media_dict[\"EX_nh4_e\"] = 1000.0\n",
     "min_media_dict[\"EX_ni2_e\"] = 1000.0\n",
-    "min_media_dict[\"EX_pi_e\"] = 1000.0\n",
-    "\n",
+    "min_media_dict[\"EX_pi_e\"] = 1000.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3fb6a17-266f-45f1-ba3d-cd5cdabfb610",
+   "metadata": {},
+   "source": [
+    "Apply the growth model to each reaction of the Biolog file under new media conditions created above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b62c91fd-84c0-4ec4-9fc9-ae3282c32d20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# We open the file that contains the exchange reactions of each carbon source of the biolog file.\n",
     "biolog_names = pd.read_csv(\"/Users/rodr579/Library/CloudStorage/OneDrive-PNNL/venv/PM02OnlyNamesAndBiGG.csv\")\n",
     "\n",
@@ -124,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
