--- a/concerto/notebooks/generate_rich_media.ipynb
+++ b/concerto/notebooks/generate_rich_media.ipynb
@@ -1,12 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "21ae227a-f569-4753-a2b6-a949f95d1199",
+   "metadata": {},
+   "source": [
+    "# Create a csv file in the format that memote will accept (experiments.yml) to run\n",
+    "- Requires running of carve.me model generation first"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "c0374e1e",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -326,10 +333,7 @@
     }
    ],
    "source": [
-    "'''This function will help you create a csv file in the format that experiments.yml wants to run memote.'''\n",
-    "\n",
     "#We load the necessary libraries.\n",
-    "\n",
     "import pandas as pd\n",
     "import re\n",
     "import cobra\n",
@@ -337,7 +341,7 @@
     "from cobra.medium import minimal_medium\n",
     "\n",
     "#We load the model that we want to generate a minimal media csv file.\n",
-    "model_csc031 = read_sbml_model(\"/Users/rodr579/Library/CloudStorage/OneDrive-PNNL/venv/updated_modelcsc031FixedCompartments.xml\")\n",
+    "model_csc031 = read_sbml_model(\"concerto/concerto/memotedata/updated_modelcsc031FixedCompartments.xml\")\n",
     "\n",
     "def getMedias(model, element, model_name):\n",
     "    '''\n",
@@ -396,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
