created seperate notebooks for smetana community and caco3 modeling, created community_modeling.py for util functions, removed extra files

--- a/concerto/notebooks/consumer_resource_modeling/test_notebook.ipynb
+++ b/concerto/notebooks/consumer_resource_modeling/test_notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,20 +58,21 @@
     "            species.initial_concentration = species.initial_amount\n",
     "        species.has_only_substance_units = False\n",
     "\n",
-    "    for reaction in m.reactions:\n",
-    "        rate_law = reaction.getKineticLaw()\n",
-    "        print(reaction)\n",
-    "        print(rate_law)\n",
-    "        print(rate_law.formula)\n",
-    "        for parameter in rate_law.parameters:\n",
-    "            print('test')\n",
-    "            print(parameter, parameter.name, parameter.id, parameter.value)\n",
+    "    # for reaction in m.reactions:\n",
+    "    #     rate_law = reaction.getKineticLaw()\n",
+    "    #     print(reaction)\n",
+    "    #     print(rate_law)\n",
+    "    #     print(rate_law.formula)\n",
+    "    #     for parameter in rate_law.parameters:\n",
+    "    #         print('test')\n",
+    "    #         print(parameter, parameter.name, parameter.id, parameter.value)\n",
     "\n",
     "\n",
     "    libsbml.writeSBMLToFile(d,corrected_sbml_file) \n",
     "\n",
     "    # create mira model from corrected SBML file and assign priors \n",
     "    mira_model = template_model_from_sbml_file(corrected_sbml_file)\n",
+    "    \n",
     "    rate_constant_dist = Distribution(\n",
     "                    type= \"Uniform1\",\n",
     "                    parameters= {\"minimum\": 1e-3,\"maximum\": 1.0 }     \n",
@@ -98,9 +99,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MIRA Model contains templates.\n"
+     ]
+    }
+   ],
    "source": [
     "antimony_str = 'test_antimony_file.txt'\n",
     "sbml_file = 'test1.xml'\n",
@@ -232,6 +241,99 @@
     "plots.save_schema(schema2, \"_schema.json\")\n",
     "plots.ipy_display(schema2, dpi=150)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR: No templates found in MIRA Model!\n",
+      "MIRA Model Templates: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "antimony_str3 = './antimony_model_test3.txt'\n",
+    "sbml_file3 = 'test3.xml'\n",
+    "corrected_sbml_file3 = 'test3_corrected.xml'\n",
+    "petri_net_file3 = 'test3.json'\n",
+    "\n",
+    "test_petri_net_model3, test_mira_model3  = convert_antimony_to_petri_net_model(antimony_str3, sbml_file3, corrected_sbml_file3, petri_net_file3)\n",
+    "\n",
+    "\n",
+    "print(\"MIRA Model Templates:\", test_mira_model3.templates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install pygraphviz\n",
+    "test_mira_model3.draw_graph('test3_graph')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MIRA Model Parameters: {'k1f': Parameter(name='k1f', display_name=None, description='', identifiers={}, context={}, units=None, value=1.0, distribution=Distribution(type='Uniform1', parameters={'minimum': 0.001, 'maximum': 1.0})), 'k1r': Parameter(name='k1r', display_name=None, description='', identifiers={}, context={}, units=None, value=1.0, distribution=Distribution(type='Uniform1', parameters={'minimum': 0.001, 'maximum': 1.0})), 'default_compartment': Parameter(name='default_compartment', display_name=None, description='', identifiers={}, context={}, units=None, value=1.0, distribution=None)}\n",
+      "MIRA Model Templates: []\n",
+      "MIRA Model Initials: {'S1': Initial(concept=Concept(name='S1', display_name='S1', description=None, identifiers={}, context={}, units=None), expression=1.0), 'S2': Initial(concept=Concept(name='S2', display_name='S2', description=None, identifiers={}, context={}, units=None), expression=1.0), 'S3': Initial(concept=Concept(name='S3', display_name='S3', description=None, identifiers={}, context={}, units=None), expression=1.0)}\n",
+      "MIRA Model Observables: {}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"MIRA Model Parameters:\", test_mira_model3.parameters)\n",
+    "print(\"MIRA Model Templates:\", test_mira_model3.templates)\n",
+    "print(\"MIRA Model Initials:\", test_mira_model3.initials)\n",
+    "print(\"MIRA Model Observables:\", test_mira_model3.observables)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mira'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrequests\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtellurium\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmira\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msources\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msbml\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m template_model_from_sbml_file\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmira\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodeling\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Model\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmira\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodeling\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mode\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m OdeModel\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'mira'"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import tellurium\n",
+    "\n",
+    "from mira.sources.sbml import template_model_from_sbml_file\n",
+    "from mira.modeling import Model\n",
+    "from mira.modeling.ode import OdeModel\n",
+    "from mira.modeling.viz import GraphicalModel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -250,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
