updated FBA function - needs more work since I'm getting 0 yield of CaCO3

--- a/concerto/notebooks/consumer_resource_modeling/calcium_carbonate_modeling.ipynb
+++ b/concerto/notebooks/consumer_resource_modeling/calcium_carbonate_modeling.ipynb
@@ -505,27 +505,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:cobra.io.sbml:Model does not contain SBML fbc package information.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Restricted license - for non-production use only - expires 2024-10-28\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "WARNING:cobra.io.sbml:Model does not contain SBML fbc package information.\n",
       "WARNING:cobra.io.sbml:Adding exchange reaction EX_water with default bounds for boundary metabolite: water.\n",
       "WARNING:cobra.io.sbml:Missing lower flux bound set to '-1000.0' for reaction: '<Reaction reaction_ureolysis>'\n",
       "WARNING:cobra.io.sbml:Missing upper flux bound set to '1000.0' for reaction: '<Reaction reaction_ureolysis>'\n",
@@ -547,7 +534,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Objective value: 0.0\n",
+      "Objective value (CaCO3 yield): 0.0\n",
       "\n",
       "Flux distribution:\n",
       "EX_water: 0.0\n",
@@ -562,25 +549,37 @@
    ],
    "source": [
     "import cobra\n",
-    "\n",
-    "def run_fba_on_sbml(sbml_file):\n",
+    "def optimize_calcium_carbonate_yield(sbml_file):\n",
     "    # Load the SBML model\n",
     "    model = cobra.io.read_sbml_model(sbml_file)\n",
     "    \n",
-    "    # Perform Flux Balance Analysis (FBA)\n",
+    "    # Set default bounds for all reactions\n",
+    "    for reaction in model.reactions:\n",
+    "        reaction.lower_bound = -1000\n",
+    "        reaction.upper_bound = 1000\n",
+    "    \n",
+    "    # Adjust bounds for specific reactions if needed\n",
+    "    model.reactions.get_by_id('reaction_ureolysis').lower_bound = 0   # Ureolysis is irreversible\n",
+    "    model.reactions.get_by_id('reaction_ureolysis').upper_bound = 1000  # Allow a large flux\n",
+    "\n",
+    "    # Set the objective to maximize CaCO3 production\n",
+    "    model.objective = 'reaction_CaCO3_precipitation'\n",
+    "    model.reactions.get_by_id('reaction_CaCO3_precipitation').objective_coefficient = 1\n",
+    "    \n",
+    "    # Perform FBA\n",
     "    solution = model.optimize()\n",
     "    \n",
-    "    # Print the objective value\n",
-    "    print(\"Objective value:\", solution.objective_value)\n",
+    "    # Print the objective value (max yield of CaCO3)\n",
+    "    print(\"Objective value (CaCO3 yield):\", solution.objective_value)\n",
     "    \n",
     "    # Print the flux distribution\n",
     "    print(\"\\nFlux distribution:\")\n",
     "    for reaction in model.reactions:\n",
     "        print(f\"{reaction.id}: {solution.fluxes[reaction.id]}\")\n",
-    "\n",
-    "\n",
-    "# Run FBA on the SBML model\n",
-    "run_fba_on_sbml(corrected_sbml_file)"
+    "    \n",
+    "    return solution\n",
+    "# Optimize for CaCO3 yield\n",
+    "solution = optimize_calcium_carbonate_yield(corrected_sbml_file)"
    ]
   },
   {
